tests/functional/data/transpiler/common/errors/dim/dim_expects_at_least_one_argument.err
dim_expects_at_least_one_argument.cpp:1:20: error: [@dim] expects at least one argument
    1 | typedef int* mat89 @dim;
      |                    ^
